Index page version 1 picture and short bio

--- a/index.html
+++ b/index.html
@@ -1,7 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chloe Lavest - Bio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 900px;
+            margin: 20px auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .bio-section {
+            display: flex;
+            align-items: center;
+        }
+        .bio-text {
+            flex: 2;
+            padding-right: 20px;
+        }
+        .bio-text h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+        .bio-text p {
+            margin-bottom: 15px;
+        }
+        .bio-text a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .bio-text a:hover {
+            text-decoration: underline;
+        }
+        .bio-image {
+            flex: 1;
+        }
+        .bio-image img {
+            width: 100%;
+            max-width: 250px;
+            height: auto;
+            border-radius: 50%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="container">
+        <div class="bio-section">
+            <div class="bio-text">
+                <h1>Chloé Lavest</h1>
+                <p>
+                    I am a PhD Candidate at Utrecht University. I am studying Perceptions of Discrimination of immigrants 
+                    and children of immigrants in Europe - specifically in relation to their educational attainment 
+                    (the Integration Paradox). I am supervised by Lucas Drouhot, Meta van der Linden, and Frank van Tubergen.
+                </p>
+                <p>
+                    My research interests also include social stratification and social mobility, as well as intergroup 
+                    relations, and perceived privilege from dominant groups in societies.
+                </p>
+                <p>
+                    You can check my BlueSky account 
+                    <a href="{https://bsky.app/profile/chlolv.bsky.social}" target="_blank">here</a> or drop me an email 
+                    <a href="mailto:c.lavest@uu.nl">here</a>.
+                </p>
+            </div>
+            <div class="bio-image">
+                <img src="CV_pic_Chloe_2024" alt="Chloé Lavest">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
