Fix href picture

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </p>
             </div>
             <div class="bio-image">
-                <img src="CV_pic_Chloe_2024" alt="Chloé Lavest">
+                <img src="CV_pic_Chloe_2024.jpg" alt="Chloé Lavest">
             </div>
         </div>
     </div>
