Fix href bluesky

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </p>
                 <p>
                     You can check my BlueSky account 
-                    <a href="{https://bsky.app/profile/chlolv.bsky.social}" target="_blank">here</a> or drop me an email 
+                    <a href="https://bsky.app/profile/chlolv.bsky.social" target="_blank">here</a> or drop me an email 
                     <a href="mailto:c.lavest@uu.nl">here</a>.
                 </p>
             </div>
