--- a/cv.html
+++ b/cv.html
@@ -160,9 +160,9 @@
 
         <div class="pdf-preview">
             <p><strong>Preview of my full CV:</strong></p>
-            <iframe src="English_CV_PhD.pdf"></iframe>
+            <iframe src="CV_Dec_24.pdf"></iframe>
             <p>
-                <a href="English_CV_PhD.pdf" download>Download the full CV (PDF)</a>
+                <a href="CV_Dec_24.pdf" download>Download the full CV (PDF)</a>
             </p>
         </div>
     </div>
