--- a/index.html
+++ b/index.html
@@ -90,11 +90,8 @@
             </div>
         </div>
     </div>
-
-    <div class="container">
-        <h1>Curriculum Vitae</h1>
-
-        <div class="cv-details">
+    
+        <div class="container">
             <h2>Ongoing Research</h2>
             <ul>
                 <li>
@@ -142,7 +139,7 @@
                 </li>
             </ul>
 
-            <h2>Published Work</h2>
+            <h2>Selected Publications</h2>
             <ul>
                 <li>
                     Landais, C., Bounie, D., Camara, Y., Fize, E., Galbraith, J., Lavest, C., Pazem, T., & Savatier, B. (2020). 
