--- a/cv.html
+++ b/cv.html
@@ -71,7 +71,9 @@
 </nav>
 
 <body>
-            <h2>Education</h2>
+
+        <div class="container">
+        <h1>Education</h1>
             <ul>
                 <li><strong>PhD Candidate:</strong> Utrecht University (2022 - Present) - Supervisors: Lucas Drouhot, Meta van der Linden, Frank van Tubergen</li>
                 <li><strong>Engineering Diploma:</strong> ENSAE - Institut Polytechnique de Paris (2018-2022) - Data Science for Social Sciences</li>
@@ -84,7 +86,7 @@
                 <li><strong>Research Analyst:</strong> Conseil d’Analyse Economique (2020-2021) - Consumption and savings during COVID-19</li>
             </ul>
 
-            <h2>Skills</h2>
+            <h3>Skills</h3>
             <ul>
                 <li><strong>Languages:</strong> French (Native), English (Fluent - TOEFL 112), Italian (Intermediate)</li>
                 <li><strong>Programming:</strong> Python, R, SAS, Stata</li>
