--- a/cv.html
+++ b/cv.html
@@ -73,7 +73,9 @@
 <body>
 
         <div class="container">
-        <h1>Education</h1>
+        <h1>Resume</h1>
+            <h2>Education</h2>
+            
             <ul>
                 <li><strong>PhD Candidate:</strong> Utrecht University (2022 - Present) - Supervisors: Lucas Drouhot, Meta van der Linden, Frank van Tubergen</li>
                 <li><strong>Engineering Diploma:</strong> ENSAE - Institut Polytechnique de Paris (2018-2022) - Data Science for Social Sciences</li>
@@ -86,11 +88,16 @@
                 <li><strong>Research Analyst:</strong> Conseil d’Analyse Economique (2020-2021) - Consumption and savings during COVID-19</li>
             </ul>
 
-            <h3>Skills</h3>
+            <h2>Ongoing Research</h2>
             <ul>
-                <li><strong>Languages:</strong> French (Native), English (Fluent - TOEFL 112), Italian (Intermediate)</li>
-                <li><strong>Programming:</strong> Python, R, SAS, Stata</li>
-                <li><strong>Tools:</strong> Office Suite, LaTeX, Git & GitHub</li>
+                <li><strong>Beyond the Integration Paradox</strong> Is the integration paradox unique to perceptions of ethno-racial discrimination, 
+                    or can it be extended to study other discrimination perceptions? Reviews Requested. Organization of a workshop on the Integration 
+                    Paradox with Andreas Genoni and Nella Geurts funded by the ECSR workshop grant (5,000€) and Seed Money from Utrecht University Focus
+                    Area Migration and Societal Change (2,800€).</li>
+                <li><strong>Growing Up Disillusioned?</strong> Do high educational expectations of children of immigrant feed their perceived discrimination
+                    and disaffiliation with their country of residence?</li>
+                <li><strong>Awareness Spillover and Switching effects</strong> With Merlin Schaeffer. Discrimination salience for multiply-jeopardized 
+                    individuals and stigma-based solidarity.</li>
             </ul>
         </div>
 
