--- a/cv.html
+++ b/cv.html
@@ -103,9 +103,9 @@
 
         <div class="pdf-preview">
             <p><strong>Preview of my full CV:</strong></p>
-            <iframe src="CV_Dec_24.pdf"></iframe>
+            <iframe src="Academic_Resume_Lavest_July2025.pdf"></iframe>
             <p>
-                <a href="CV_Dec_24.pdf" download>Download the full CV (PDF)</a>
+                <a href="Academic_Resume_Lavest_July2025.pdf" download>Download the full CV (PDF)</a>
             </p>
         </div>
     </div>
