--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chloe Lavest - Bio</title>
+    <title>Chloé Lavest - Bio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,7 +80,7 @@
                     relations, and perceived privilege from dominant groups in societies.
                 </p>
                 <p>
-                    You can check my BlueSky account 
+                    You can check out my BlueSky account 
                     <a href="https://bsky.app/profile/chlolv.bsky.social" target="_blank">here</a> or drop me an email 
                     <a href="mailto:c.lavest@uu.nl">here</a>.
                 </p>
@@ -134,7 +134,7 @@
                      limitation of using children’s proxy-reported information is the number of missing answers, which is lower when parents are 
                      asked to proxy-report their child’s education. In a simulation exercise, we establish that the bias introduced by proxy reports 
                      is not negligible, with self-reported intergenerational regression coefficients being 16% higher when a proxy-report is used. 
-                    | <a href="https://osf.io/preprints/socarxiv/b2qsu">Pre-print</a> | 
+                    | <a href="https://osf.io/preprints/socarxiv/b2qsu">Working Paper</a> | 
                     <a href="ECSR_23_Lavest.pdf" >Slides</a>
                 </li>
             </ul>
