--- a/cv.html
+++ b/cv.html
@@ -82,22 +82,25 @@
                 <li><strong>Master’s Degree:</strong> Université de Versailles et Saint-Quentin (2021-2022) - Quantitative Sociology and Demography</li>
             </ul>
 
-            <h2>Work Experience</h2>
-            <ul>
-                <li><strong>Research Assistant:</strong> Institut National des Etudes Démographiques (2021-2022) - Socio-economic research using French survey data</li>
-                <li><strong>Research Analyst:</strong> Conseil d’Analyse Economique (2020-2021) - Consumption and savings during COVID-19</li>
-            </ul>
-
             <h2>Ongoing Research</h2>
             <ul>
-                <li><strong>Beyond the Integration Paradox</strong> Is the integration paradox unique to perceptions of ethno-racial discrimination, 
-                    or can it be extended to study other discrimination perceptions? Reviews Requested. Organization of a workshop on the Integration 
-                    Paradox with Andreas Genoni and Nella Geurts funded by the ECSR workshop grant (5,000€) and Seed Money from Utrecht University Focus
-                    Area Migration and Societal Change (2,800€).</li>
-                <li><strong>Growing Up Disillusioned?</strong> Do high educational expectations of children of immigrant feed their perceived discrimination
-                    and disaffiliation with their country of residence?</li>
-                <li><strong>Awareness Spillover and Switching effects</strong> With Merlin Schaeffer. Discrimination salience for multiply-jeopardized 
-                    individuals and stigma-based solidarity.</li>
+                <li><strong>Growing Up Disillusioned?</strong> <em> with Lucas Drouhot, Meta van der Linden and Frank van Tubergen. </em> </li>
+                Minority youth
+                    exhibit high educational expectations across multiple European countries. 
+                    Previous research has focused on how this contributes to reducing inequalities between second-generation children and children of 
+                    natives through higher grades and enrollment rates in tertiary education, overlooking that high educational expectations might have
+                    negative consequences when unfulfilled. We address this gap by investigating how unmet educational expectations influence perceptions
+                    of discrimination among youth exiting school in Spain. We utilize a three-wave panel of second-generation children living in Spain, 
+                    interviewed between the ages of 14 and 22. Using detailed information on their educational expectations and achieved educational levels,
+                    we assess whether unmet expectations correlate with increased perceptions of discrimination. We examine the heterogeneity in the impact 
+                    of unmet expectations, hypothesizing that children with highly educated parents are more likely to perceive discrimination. Our findings
+                    indicate that children who exit the educational system earlier exhibit heightened perceptions of discrimination when their exit does not
+                    meet their expectations. Although we find that parental education is positively associated with discrimination perceptions among children, 
+                    we find no evidence for interaction effects with unmet expectations. Children of highly educated parents thus appear more attuned to 
+                    discrimination in general, but not more likely to frame their experiences of failure as discriminatory. </li>
+                
+                <li><strong>Awareness Spillover and Switching effects</strong> <em> With Merlin Schaeffer. </em>  </li>
+                Discrimination salience for multiply-jeopardized individuals and stigma-based solidarity.</li>
             </ul>
         </div>
 
