--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
             <h2>Ongoing Research</h2>
             <ul>
                 <li>
-                    <strong>Beyond the Integration Paradox</strong> Highly educated minority individuals perceive more 
-                    ethnic discrimination than their less educated counterparts – a now well-established finding 
+                    <strong>Beyond the Integration Paradox</strong> <em> With Lucas Drouhot, Meta van der Linden and Frank van Tubergen </em> <br>
+                    
+                    Highly educated minority individuals perceive more ethnic discrimination than their less educated counterparts – a now well-established finding 
                     referred to as the “integration paradox”. In this paper, we study whether this purported paradox 
                     captures general educational effects on the lived experiences of historically disadvantaged populations 
                     going beyond the scope of integration among immigrants. We do so by comparing educational effects on 
@@ -112,30 +113,28 @@
                     | <a href="S_MC_Lavest_Slides.pdf" >Slides</a>
                 </li>
                 <li>
-                    <strong>Growing up Disillusioned?</strong> Children of immigrants display high educational aspirations and expectations.
-                     This leads to the reduction of origin-related gaps in achievements, as children growing up in relatively more 
-                     deprived families aim higher, aim more often for academic tracks, and stay in education longer than native students
-                      from similar socio-economic backgrounds. However, this can also lead to disappointment, when educational aspirations
-                       are not fulfilled. We study how unmet educational aspirations and expectations might fuel discrimination perceptions 
-                       among children of immigrants in Spain. Following aspirations and achieved education across 8 years, from mandatory 
-                       school to labor market entry, we identify when and for whom expectations turn sour. Using individual fixed-effects models,
-                        we show that disappointed children who prematurely leave the educational system display increased discrimination reports 
-                        compared to their peers.
+                    <strong>Growing up Disillusioned?</strong> <em> With Lucas Drouhot, Meta van der Linden and Frank van Tubergen </em> <br>
+                    
+                    Minority youth exhibit high educational expectations across multiple European countries. 
+                    Previous research has focused on how this contributes to reducing inequalities between second-generation children and children of 
+                    natives through higher grades and enrollment rates in tertiary education, overlooking that high educational expectations might have
+                    negative consequences when unfulfilled. We address this gap by investigating how unmet educational expectations influence perceptions
+                    of discrimination among youth exiting school in Spain. We utilize a three-wave panel of second-generation children living in Spain, 
+                    interviewed between the ages of 14 and 22. Using detailed information on their educational expectations and achieved educational levels,
+                    we assess whether unmet expectations correlate with increased perceptions of discrimination. We examine the heterogeneity in the impact 
+                    of unmet expectations, hypothesizing that children with highly educated parents are more likely to perceive discrimination. Our findings 
+                    indicate that children who exit the educational system earlier exhibit heightened perceptions of discrimination when their exit does not 
+                    meet their expectations. Although we find that parental education is positively associated with discrimination perceptions among children,
+                    we find no evidence for interaction effects with unmet expectations. Children of highly educated parents thus appear more attuned to
+                    discrimination in general, but not more likely to frame their experiences of failure as discriminatory.
                     | <a href="LIVES_2024_Lavest_Presentation.pdf" >Slides</a>
                 </li>
                 <li>
-                    <strong>Who do They Think You Are?</strong> Estimates of intergenerational educational mobility are generally computed 
-                    using a combination of self- and proxy-reports of one’s and one’s parents’ education. Such reports are easily collected,
-                    offering a cost-effective alternative to collecting multiple self-reports or register data. However, the bias that 
-                    proxy-reports could introduce in the measurement of intergenerational educational mobility is rarely assessed. Our study 
-                    fills this gap and assesses how reliable people are when they report their parents’ or their child’s educational attainment. 
-                    We find that both parents and children tend to underestimate the educational distance between themselves and their family members,
-                     thus inflating estimates of educational reproduction. This trend is larger whenchildren act as proxy-reporters. Another 
-                     limitation of using children’s proxy-reported information is the number of missing answers, which is lower when parents are 
-                     asked to proxy-report their child’s education. In a simulation exercise, we establish that the bias introduced by proxy reports 
-                     is not negligible, with self-reported intergenerational regression coefficients being 16% higher when a proxy-report is used. 
-                    | <a href="https://osf.io/preprints/socarxiv/b2qsu">Working Paper</a> | 
-                    <a href="ECSR_23_Lavest.pdf" >Slides</a>
+                    <strong>What Am I Discriminated For? Discrimination awareness spillover effects for multiply disadvantaged groups.</strong> <em> With Merlin Schaeffer </em> <br>
+                    We study whether multiply disadvantaged individuals (compared to uniquely disadvantaged ones) interpret information about discrimination of
+                    one of their ingroups. Using a survey experiment, we investigate whether threat to one outgroup generalizes to other outgroups. Furthermore, 
+                    for uniquely disadvantaged individuals we seek to understand whether information about discrimination of an outgroup fosters stigma-based solidarity
+                    or competition.
                 </li>
             </ul>
 
