--- a/cv.html
+++ b/cv.html
@@ -84,7 +84,7 @@
 
             <h2>Ongoing Research</h2>
             <ul>
-                <li><strong>Growing Up Disillusioned?</strong> <em> with Lucas Drouhot, Meta van der Linden and Frank van Tubergen. </em> </li>
+                <li><strong>Growing Up Disillusioned?</strong> <em> with Lucas Drouhot, Meta van der Linden and Frank van Tubergen. </em> <br>
                 Minority youth
                     exhibit high educational expectations across multiple European countries. 
                     Previous research has focused on how this contributes to reducing inequalities between second-generation children and children of 
@@ -99,8 +99,11 @@
                     we find no evidence for interaction effects with unmet expectations. Children of highly educated parents thus appear more attuned to 
                     discrimination in general, but not more likely to frame their experiences of failure as discriminatory. </li>
                 
-                <li><strong>Awareness Spillover and Switching effects</strong> <em> With Merlin Schaeffer. </em>  </li>
-                Discrimination salience for multiply-jeopardized individuals and stigma-based solidarity.</li>
+                <li><strong>What Am I Discriminated For? Discrimination awareness spillover effects for multiply disadvantaged groups</strong> <em> With Merlin Schaeffer. </em>  <br>
+                 We study whether multiply disadvantaged individuals (compared to uniquely disadvantaged ones) interpret information about discrimination of
+                    one of their ingroups. Using a survey experiment, we investigate whether threat to one outgroup generalizes to other outgroups. Furthermore, 
+                    for uniquely disadvantaged individuals we seek to understand whether information about discrimination of an outgroup fosters stigma-based solidarity
+                    or competition.</li>
             </ul>
         </div>
 
