--- a/index.html
+++ b/index.html
@@ -141,13 +141,18 @@
             <h2>Selected Publications</h2>
             <ul>
                 <li>
-                    Landais, C., Bounie, D., Camara, Y., Fize, E., Galbraith, J., Lavest, C., Pazem, T., & Savatier, B. (2020). 
+                    <em>Lavest, C.</em>em>, Ferry, M., Ichou, M., \& Präg, P. (Forthcoming). "Who Do They Think You Are? Inconsistencies 
+                    in Self- and Proxy-Reports of Education Within Families." <em>Social Science Research.</em>em>
+                </li>
+                
+                <li>
+                    Landais, C., Bounie, D., Camara, Y., Fize, E., Galbraith, J., <em>Lavest, C.</em>em>, Pazem, T., & Savatier, B. (2020). 
                     "Consumption dynamics in the COVID crisis: Real-time insights from French transaction & bank data." 
                     <em>CEPR Discussion Paper</em>, 15474. 
                     <a href="https://doi.org/10.3386/w27431">https://doi.org/10.3386/w27431</a>
                 </li>
                 <li>
-                    Lavest, C., Landais, C., & Fize, E. (2021). "Consommation, épargne et fragilités financières pendant la crise Covid." 
+                    <em>Lavest, C.<e/m>, Landais, C., & Fize, E. (2021). "Consommation, épargne et fragilités financières pendant la crise Covid." 
                     <em>CAE Focus</em>, 54. 
                     <a href="https://doi.org/10.1111/ajps.12533">https://doi.org/10.1111/ajps.12533</a>
                 </li>
