--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <h2>Selected Publications</h2>
             <ul>
                 <li>
-                    <em>Lavest, C.</em>em>, Ferry, M., Ichou, M., \& Präg, P. (Forthcoming). "Who Do They Think You Are? Inconsistencies 
-                    in Self- and Proxy-Reports of Education Within Families." <em>Social Science Research.</em>em>
+                    <em>Lavest, C.</em>, Ferry, M., Ichou, M., \& Präg, P. (Forthcoming). "Who Do They Think You Are? Inconsistencies 
+                    in Self- and Proxy-Reports of Education Within Families." <em>Social Science Research.</em>
                 </li>
                 
                 <li>
