--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                 </li>
             </ul>
 
-            <h2>Selected Publications</h2>
+            <h2>Publications</h2>
             <ul>
                 <li>
-                    <em>Lavest, C.</em>, Ferry, M., Ichou, M., \& Präg, P. (Forthcoming). "Who Do They Think You Are? Inconsistencies 
-                    in Self- and Proxy-Reports of Education Within Families." <em>Social Science Research.</em>
+                    <em>C. Lavest</em>, M. Ferry, M. Ichou, P. Präg, Who do they think you are? Inconsistencies in self- and proxy-reports of education within families, 
+                    Social Science Research, <a href="https://doi.org/10.1016/j.ssresearch.2025.103225">https://doi.org/10.1016/j.ssresearch.2025.103225</a>.
                 </li>
                 
                 <li>
