--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@
             <h2>Publications</h2>
             <ul>
                 <li>
-                    <em>C. Lavest</em>, M. Ferry, M. Ichou, P. Präg, Who do they think you are? Inconsistencies in self- and proxy-reports of education within families, 
-                    Social Science Research, <a href="https://doi.org/10.1016/j.ssresearch.2025.103225">https://doi.org/10.1016/j.ssresearch.2025.103225</a>.
+                    <strong>C. Lavest</strong>, M. Ferry, M. Ichou, P. Präg, Who do they think you are? Inconsistencies in self- and proxy-reports of education within families, 
+                    <em>Social Science Research</em>, <a href="https://doi.org/10.1016/j.ssresearch.2025.103225">https://doi.org/10.1016/j.ssresearch.2025.103225</a>.
                 </li>
                 
                 <li>
-                    Landais, C., Bounie, D., Camara, Y., Fize, E., Galbraith, J., <em>Lavest, C.</em>em>, Pazem, T., & Savatier, B. (2020). 
+                    Landais, C., Bounie, D., Camara, Y., Fize, E., Galbraith, J., <strong>Lavest, C.</strong>, Pazem, T., & Savatier, B. (2020). 
                     "Consumption dynamics in the COVID crisis: Real-time insights from French transaction & bank data." 
                     <em>CEPR Discussion Paper</em>, 15474. 
                     <a href="https://doi.org/10.3386/w27431">https://doi.org/10.3386/w27431</a>
                 </li>
                 <li>
-                    <em>Lavest, C.<e/m>, Landais, C., & Fize, E. (2021). "Consommation, épargne et fragilités financières pendant la crise Covid." 
+                    <strong>Lavest, C.</strong>, Landais, C., & Fize, E. (2021). "Consommation, épargne et fragilités financières pendant la crise Covid." 
                     <em>CAE Focus</em>, 54. 
                     <a href="https://doi.org/10.1111/ajps.12533">https://doi.org/10.1111/ajps.12533</a>
                 </li>
