--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <h2>Publications</h2>
             <ul>
                 <li>
-                    <strong>C. Lavest</strong>, M. Ferry, M. Ichou, P. Präg, Who do they think you are? Inconsistencies in self- and proxy-reports of education within families, 
+                    <strong>C. Lavest</strong>, M. Ferry, M. Ichou, P. Präg (2025) "Who do they think you are? Inconsistencies in self- and proxy-reports of education within families", 
                     <em>Social Science Research</em>, <a href="https://doi.org/10.1016/j.ssresearch.2025.103225">https://doi.org/10.1016/j.ssresearch.2025.103225</a>.
                 </li>
                 
