--- a/cv.html
+++ b/cv.html
@@ -82,36 +82,38 @@
                 <li><strong>Master’s Degree:</strong> Université de Versailles et Saint-Quentin (2021-2022) - Quantitative Sociology and Demography</li>
             </ul>
 
-            <h2>Ongoing Research</h2>
+            <h2>Publications and Projects</h2>
             <ul>
-                <li><strong>Growing Up Disillusioned?</strong> <em> with Lucas Drouhot, Meta van der Linden and Frank van Tubergen. </em> <br>
-                Minority youth
-                    exhibit high educational expectations across multiple European countries. 
-                    Previous research has focused on how this contributes to reducing inequalities between second-generation children and children of 
-                    natives through higher grades and enrollment rates in tertiary education, overlooking that high educational expectations might have
-                    negative consequences when unfulfilled. We address this gap by investigating how unmet educational expectations influence perceptions
-                    of discrimination among youth exiting school in Spain. We utilize a three-wave panel of second-generation children living in Spain, 
-                    interviewed between the ages of 14 and 22. Using detailed information on their educational expectations and achieved educational levels,
-                    we assess whether unmet expectations correlate with increased perceptions of discrimination. We examine the heterogeneity in the impact 
-                    of unmet expectations, hypothesizing that children with highly educated parents are more likely to perceive discrimination. Our findings
-                    indicate that children who exit the educational system earlier exhibit heightened perceptions of discrimination when their exit does not
-                    meet their expectations. Although we find that parental education is positively associated with discrimination perceptions among children, 
-                    we find no evidence for interaction effects with unmet expectations. Children of highly educated parents thus appear more attuned to 
-                    discrimination in general, but not more likely to frame their experiences of failure as discriminatory. </li>
+               <li>
+                    <strong>C. Lavest</strong>, Drouhot, L. G., Van Der Linden, M., & Van Tubergen, F. (2025). 
+                    Beyond the "integration paradox": Educational attainment similarly predicts gender discrimination among women and ethnic 
+                    discrimination among minorities. <em>European Sociological Review</em>, <a href="https://doi.org/10.1093/esr/jcaf039">https://doi.org/10.1093/esr/jcaf039</a>.
+                </li>
                 
-                <li><strong>What Am I Discriminated For? Discrimination awareness spillover effects for multiply disadvantaged groups</strong> <em> With Merlin Schaeffer. </em>  <br>
-                 We study whether multiply disadvantaged individuals (compared to uniquely disadvantaged ones) interpret information about discrimination of
-                    one of their ingroups. Using a survey experiment, we investigate whether threat to one outgroup generalizes to other outgroups. Furthermore, 
-                    for uniquely disadvantaged individuals we seek to understand whether information about discrimination of an outgroup fosters stigma-based solidarity
-                    or competition.</li>
+                <li>
+                    <strong>C. Lavest</strong>, M. Ferry, M. Ichou, P. Präg (2025) Who do they think you are? Inconsistencies in self- and proxy-reports of education within families, 
+                    <em>Social Science Research</em>, <a href="https://doi.org/10.1016/j.ssresearch.2025.103225">https://doi.org/10.1016/j.ssresearch.2025.103225</a>.
+                </li>
+
+                <li>
+                    <strong>C. Lavest</strong>, M. Ferry, M. Ichou (2025) Répondre pour autrui : comparer les déclarations au sein des familles, 
+                    <em>Pre-print</em>, <a href="10.31235/osf.io/mdj2g_v1">10.31235/osf.io/mdj2g_v1</a>.
+                </li>
+                
+                <li>
+                    Landais, C., Bounie, D., Camara, Y., Fize, E., Galbraith, J., <strong>Lavest, C.</strong>, Pazem, T., & Savatier, B. (2020). 
+                    "Consumption dynamics in the COVID crisis: Real-time insights from French transaction & bank data." 
+                    <em>CEPR Discussion Paper</em>, 15474. 
+                    <a href="https://doi.org/10.3386/w27431">https://doi.org/10.3386/w27431</a>
+                </li>
             </ul>
         </div>
 
         <div class="pdf-preview">
             <p><strong>Preview of my full CV:</strong></p>
-            <iframe src="Academic_Resume_Lavest_July25.pdf"></iframe>
+            <iframe src="Academic_Resume_Lavest_Sept25.pdf"></iframe>
             <p>
-                <a href="Academic_Resume_Lavest_July25.pdf" download>Download the full CV (PDF)</a>
+                <a href="Academic_Resume_Lavest_Sept25.pdf" download>Download the full CV (PDF)</a>
             </p>
         </div>
     </div>
